--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+python==3.7.4
 click==7.0.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
@@ -14,4 +15,4 @@ sklearn==0.0
 threadpoolctl==2.0.0
 Werkzeug==1.0.1
 gunicorn==19.9.0
-streamlit==0.59.0
+streamlit==0.47.3
