--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,3 @@
-click==7.0.0
-itsdangerous==1.1.0
-Jinja2==2.11.2
-joblib==0.15.0
-MarkupSafe==1.1.1
 numpy==1.18.4
 pandas==0.25.1
 python-dateutil==2.8.0
@@ -15,3 +10,4 @@ threadpoolctl==2.0.0
 Werkzeug==1.0.1
 gunicorn==19.9.0
 streamlit==0.59.0
+plotly==4.7.1
