--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ pandas==0.25.1
 scikit-learn==0.22.1
 scipy==1.3.0
 gunicorn==20.0.4
-streamlit==0.59.0
-plotly==4.7.1
+streamlit==0.51.0
+plotly-express==0.4.1
